--- a/static/pages/question.html
+++ b/static/pages/question.html
@@ -2,7 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="theme-color" content="#f0f0f0" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Страница теста, созданная по приколу. Для настройки вопроса и вариантов ответа испольуются параметры URL."
+        />
+        <meta name="keywords" content="url, тест, прикол, шутка" />
+        <meta name="og:title" content="Тест:)" />
+        <meta
+            name="og:description"
+            content="Страница теста, созданная по приколу. Для настройки вопроса и вариантов ответа испольуются параметры URL."
+        />
         <title>Question Page</title>
         <style>
             body {
