--- a/static/pages/question.html
+++ b/static/pages/question.html
@@ -15,53 +15,7 @@
             content="Страница теста, созданная по приколу. Для настройки вопроса и вариантов ответа испольуются параметры URL."
         />
         <title>Question Page</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                text-align: center;
-                margin-top: 50px;
-                height: 100vh;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-            }
-            h1 {
-                font-size: 24px;
-                margin-bottom: 20px;
-            }
-            .choices {
-                list-style-type: none;
-                padding: 0;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-            .choice-button {
-                margin: 20px 0;
-                padding: 15px 25px;
-                font-size: 16px;
-                color: white;
-                background-color: #007bff;
-                border: none;
-                border-radius: 5px;
-                text-decoration: none;
-                transition: background-color 0.3s;
-                position: relative;
-            }
-            .choice-button:hover {
-                opacity: 0.8;
-            }
-            .green {
-                background-color: #28a745;
-            }
-            .red {
-                background-color: #dc3545;
-            }
-            .choices li {
-                margin: 20px 0;
-            }
-        </style>
+        <link rel="stylesheet" href="/static/styles/question.css"></link>
     </head>
     <body>
         <h1>{{ .Question }}</h1>
@@ -75,48 +29,6 @@
             {{ end }}
         </ul>
 
-        <script>
-            const buttonClasses = {
-                Да: "green",
-                Yes: "green",
-                Нет: "red",
-                No: "red",
-            };
-
-            document.querySelectorAll(".choice-button").forEach((button) => {
-                const choice = button.getAttribute("data-choice");
-                const className = buttonClasses[choice.trim()];
-
-                if (className) {
-                    button.classList.add(className);
-                }
-
-                if (choice.startsWith(" ")) {
-                    button.addEventListener("mouseenter", () =>
-                        moveButton(button),
-                    );
-                    button.addEventListener("mouseover", () =>
-                        moveButton(button),
-                    );
-                    button.addEventListener("touchstart", () =>
-                        moveButton(button),
-                    );
-                }
-            });
-
-            function moveButton(button) {
-                const windowWidth = window.innerWidth;
-                const windowHeight = window.innerHeight;
-
-                const randomX =
-                    Math.random() * (windowWidth - button.offsetWidth);
-                const randomY =
-                    Math.random() * (windowHeight - button.offsetHeight);
-
-                button.style.position = "absolute";
-                button.style.left = `${randomX}px`;
-                button.style.top = `${randomY}px`;
-            }
-        </script>
+        <script src="/static/scripts/question.js"></script>
     </body>
 </html>
