main page meta tags

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -21,6 +21,10 @@
             href="/static/images/favicons/favicon-16x16.png"
         />
         <link rel="manifest" href="/static/images/favicons/site.webmanifest" />
+        <meta name="description" content="Страница с моими сертификатами и проектами."/>
+        <meta name="keywords" content="сертификаты, проекты, github, code" />
+        <meta name="og:title" content="Wowlikon:)" />
+        <meta name="og:description" content="Страница с моими сертификатами и проектами." />
         <link rel="stylesheet" href="/static/styles/index.css" rel="preload"></link>
         <title>wowlikon</title>
     </head>
