--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -21,6 +21,7 @@
             href="/static/images/favicons/favicon-16x16.png"
         />
         <link rel="manifest" href="/static/images/favicons/site.webmanifest" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
         <meta name="description" content="Страница с моими сертификатами и проектами."/>
         <meta name="keywords" content="сертификаты, проекты, github, code" />
         <meta name="og:title" content="Wowlikon:)" />
@@ -29,8 +30,46 @@
         <title>wowlikon</title>
     </head>
     <body>
-        <h1>Hello, World!</h1>
+        <nav>
+            <ul class="menu">
+                <li class="menu-item">
+                    <!-- Иконка аватара -->
+                    <button class="menu-button">
+                        <img id="avatar" src="/static/images/default-avatar.png" alt="profile" />
+                    </button>
+                    <div class="dropdown">
+                        <div class="tabs">
+                            <button class="tab-button active" data-tab="login-tab">Вход</button>
+                            <button class="tab-button" data-tab="register-tab">Регистрация</button>
+                        </div>
+                        <div class="tab-content">
+                            <form id="login-tab" class="tab-pane active" method="POST" action="/account/login">
+                                <label for="login-email">Email:</label>
+                                <input type="email" id="login-email" name="email" required />
+                                <label for="login-password">Пароль:</label>
+                                <input type="password" id="login-password" name="password" required />
+                                <button type="submit">Войти</button>
+                            </form>
+                            <form id="register-tab" class="tab-pane" method="POST" action="/account/register">
+                                <label for="register-email">Email:</label>
+                                <input type="email" id="register-email" name="email" required />
+                                <label for="register-password">Пароль:</label>
+                                <input type="password" id="register-password" name="password" required />
+                                <label for="register-confirm-password">Повторите пароль:</label>
+                                <input type="password" id="register-confirm-password" name="confirm-password" required />
+                                <button type="submit">Зарегистрироваться</button>
+                            </form>
+                        </div>
+                        <div id="profile-menu" class="profile hidden">
+                            <h3>Добро пожаловать, <span id="user-name">User</span>!</h3>
+                            <button id="logout-button">Выйти</button>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </nav>
 
+        <h1>Hello, World!</h1>
         <h2>My Certificates</h2>
         <div class="certificates">
             <div class="sidebar">
