--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -39,30 +39,38 @@
                     </button>
                     <div class="dropdown">
                         <div class="tabs">
-                            <button class="tab-button active" data-tab="login-tab">Вход</button>
-                            <button class="tab-button" data-tab="register-tab">Регистрация</button>
+                            <button class="tab-button active" data-tab="login-tab">Login</button>
+                            <button class="tab-button" data-tab="register-tab">Register</button>
                         </div>
                         <div class="tab-content">
                             <form id="login-tab" class="tab-pane active" method="POST" action="/account/login">
                                 <label for="login-email">Email:</label>
                                 <input type="email" id="login-email" name="email" required />
-                                <label for="login-password">Пароль:</label>
+                                <br>
+                                <label for="login-password">Password:</label>
                                 <input type="password" id="login-password" name="password" required />
-                                <button type="submit">Войти</button>
+                                <br>
+                                <button type="submit">Login</button>
                             </form>
                             <form id="register-tab" class="tab-pane" method="POST" action="/account/register">
+                                <label for="register-username">Username:</label>
+                                <input type="text" id="register-username" name="username" required />
+                                <br>
                                 <label for="register-email">Email:</label>
                                 <input type="email" id="register-email" name="email" required />
-                                <label for="register-password">Пароль:</label>
+                                <br>
+                                <label for="register-password">Password:</label>
                                 <input type="password" id="register-password" name="password" required />
-                                <label for="register-confirm-password">Повторите пароль:</label>
+                                <br>
+                                <label for="register-confirm-password">Repeat:</label>
                                 <input type="password" id="register-confirm-password" name="confirm-password" required />
-                                <button type="submit">Зарегистрироваться</button>
+                                <br>
+                                <button type="submit">Register</button>
                             </form>
                         </div>
                         <div id="profile-menu" class="profile hidden">
-                            <h3>Добро пожаловать, <span id="user-name">User</span>!</h3>
-                            <button id="logout-button">Выйти</button>
+                            <h3>Welcome, <span id="user-name">User</span>!</h3>
+                            <button id="logout-button">Logout</button>
                         </div>
                     </div>
                 </li>
